Fixed Flickr gallery height issue on narrow screens

--- a/css/tk-spars.css
+++ b/css/tk-spars.css
@@ -32,7 +32,7 @@ h1 {
 	display: inline;
 	margin: auto;
 	width: 640px;
-	height: 480px;
+	height: auto;
 	max-width: 100%;
 }
 
